Updated by task 'AUTO_TM_MT_1720567773268'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/27c9a3fd2b96e3fa3eb8ac824d1477b9e84327ec

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 da Adobe Experience Platform.
 exl-id: f9fded71-8ce4-47bc-81e8-22b2482e6283
-source-git-commit: 1e9d6b0c43461902c5b966aa1d0576103e872e0c
+source-git-commit: c35b43654d31f0f112258e577a1bb95e72f0a971
 workflow-type: tm+mt
-source-wordcount: '1828'
-ht-degree: 98%
+source-wordcount: '1754'
+ht-degree: 91%
 
 ---
 
@@ -20,7 +20,7 @@ Atualizações dos recursos já existentes na Adobe Experience Platform:
    - [Coleção de dados {#data-collection}](#data-collection-data-collection)
    - [Preparação de dados {#data-prep}](#data-prep-data-prep)
    - [Destinos {#destinations}](#destinations-destinations)
-   - [Query Service {#query-service}](#query-service-query-service)
+   - [Serviço de consulta {#query-service}](#query-service-query-service)
    - [Serviço de segmentação {#segmentation}](#segmentation-service-segmentation)
    - [Fontes {#sources}](#sources-sources)
    - [Experience Data Model (XDM) {#xdm}](#experience-data-model-xdm-xdm)
@@ -75,12 +75,12 @@ Para obter mais informações sobre a preparação de dados, leia a [Visão gera
 | Destino | Novo ou atualizado | Descrição |
 | ----------- |----------------|----------- |
 | [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | Novo | Integrar identidades da Adobe Experience Platform no [!DNL LiveRamp Connect] para direcionar usuários em dispositivos móveis, na web aberta, em redes sociais e plataformas [!DNL CTV] usando o identificador [!DNL Ramp ID]. |
-| [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Azure Data Lake Storage Gen2] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seu próprio local de armazenamento. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
-| [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | Novo | O [!DNL Data Landing Zone] é uma interface de armazenamento de dados do [!DNL Azure Blob] provisionada pela Adobe Experience Platform, que concede acesso a um recurso seguro de armazenamento de arquivos baseado em nuvem para exportar arquivos para fora da Platform. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
-| [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Google Cloud Storage] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seus próprios buckets. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
-| Atualização do [[!DNL Amazon S3] ](../../destinations/catalog/cloud-storage/amazon-s3.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
-| Atualização do [[!DNL Azure Blob] ](../../destinations/catalog/cloud-storage/azure-blob.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
-| Atualização do [[!DNL SFTP] ](../../destinations/catalog/cloud-storage/sftp.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
+| [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Azure Data Lake Storage Gen2] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seu próprio local de armazenamento. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]Exportações de conjunto de dados {type=Informative}. |
+| [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | Novo | O [!DNL Data Landing Zone] é uma interface de armazenamento de dados do [!DNL Azure Blob] provisionada pela Adobe Experience Platform, que concede acesso a um recurso seguro de armazenamento de arquivos baseado em nuvem para exportar arquivos para fora da Platform. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]Exportações de conjunto de dados {type=Informative}. |
+| [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Google Cloud Storage] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seus próprios buckets. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]Exportações de conjunto de dados {type=Informative}. |
+| Atualização do [[!DNL Amazon S3] ](../../destinations/catalog/cloud-storage/amazon-s3.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]Exportações de conjunto de dados {type=Informative}. |
+| Atualização do [[!DNL Azure Blob] ](../../destinations/catalog/cloud-storage/azure-blob.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]Exportações de conjunto de dados {type=Informative}. |
+| Atualização do [[!DNL SFTP] ](../../destinations/catalog/cloud-storage/sftp.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]Exportações de conjunto de dados {type=Informative}. |
 | Conexão com o [[!DNL Adobe Campaign Managed Services] ](../../destinations/catalog/email-marketing/adobe-campaign-managed-services.md) | Atualização dos pacotes | A integração do [!DNL Adobe Campaign Managed Services] com a Adobe Experience Platform agora é compatível com diferentes tipos de sincronização de público-alvo. Use o controle Selecionar tipo de sincronização para determinar se você deve exportar públicos-alvo para o Adobe Campaign ou os públicos-alvo e seus atributos de perfil. <br> ![Novo seletor Selecionar tipo de sincronização realçado.](/help/release-notes/2023/assets/acms-destination-export-type.png "Novo seletor Selecionar tipo de sincronização realçado."){width="100" zoomable="yes"} |
 
 {style="table-layout:auto"}
@@ -126,7 +126,7 @@ O [!DNL Segmentation Service] permite segmentar dados relacionados a indivíduos
 
 | Recurso | Descrição |
 | ------- | ----------- |
-| Portal de público-alvo | O Portal de público-alvo oferece uma nova experiência de navegação para acessar, criar e gerenciar públicos-alvo na Adobe Experience Platform. No Portal de público-alvo, você pode visualizar públicos-alvo gerados pela Platform e externamente, melhorar a eficiência do trabalho por meio de filtragem, pastas e tags, criar públicos-alvo gerados pela Platform e importar públicos gerados externamente por meio de arquivos CSV. Para obter mais informações sobre o Portal de público-alvo, leia o [guia da interface do serviço de segmentação](../../segmentation/ui/overview.md). |
+| Portal de público-alvo | O Portal de público-alvo oferece uma nova experiência de navegação para acessar, criar e gerenciar públicos-alvo na Adobe Experience Platform. No Portal de público-alvo, você pode visualizar públicos-alvo gerados pela Platform e externamente, melhorar a eficiência do trabalho por meio de filtragem, pastas e tags, criar públicos-alvo gerados pela Platform e importar públicos gerados externamente por meio de arquivos CSV. Para obter mais informações sobre o Audience Portal, leia o [Visão geral do portal de público](../../segmentation/ui/audience-portal.md). |
 | Composição de público-alvo | A Composição de público-alvo fornece um espaço de trabalho fácil de usar para criar e editar públicos-alvo usando blocos para representar ações diferentes. Para obter mais informações sobre a Composição de público-alvo, leia o [guia da interface da Composição de público-alvo](../../segmentation/ui/audience-composition.md). |
 
 Para obter mais informações sobre o [!DNL Segmentation Service], consulte a [Visão geral de segmentação](../../segmentation/home.md).
@@ -139,7 +139,7 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 
 | Recurso | Descrição |
 | --- | --- |
-| [!BADGE  Beta]{type=Informative}[!DNL SAP Commerce] | Agora você pode usar a origem do [[!DNL SAP Commerce] ](../../sources/connectors/ecommerce/sap-commerce.md) para trazer os dados de faturamento de assinatura da sua conta do [!DNL SAP Commerce] para a Experience Platform. |
+| [!BADGE Beta]{type=Informativo} [!DNL SAP Commerce] | Agora você pode usar a origem do [[!DNL SAP Commerce] ](../../sources/connectors/ecommerce/sap-commerce.md) para trazer os dados de faturamento de assinatura da sua conta do [!DNL SAP Commerce] para a Experience Platform. |
 | Compatibilidade com o [!DNL Phoenix] | Agora você pode usar a origem do [[!DNL Phoenix] ](../../sources/connectors/databases/phoenix.md) para trazer dados do seu banco de dados do [!DNL Phoenix] para a Experience Platform. |
 | Atualizações de autenticação do [!DNL Salesforce] e [!DNL Salesforce Service Cloud] | Agora você pode especificar a versão da API da sua origem do [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Salesforce Service Cloud]](../../sources/connectors/customer-success/salesforce-service-cloud.md) ao autenticar uma nova conta com a interface da Experience Platform ou a API do [!DNL Flow Service]. |
 
