Updated by task 'AUTO_TM_MT_1724790416512'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/cb5cbf48bf334239964b573d64a67fc5662a9fef

--- a/help/release-notes/2024/may-2024.md
+++ b/help/release-notes/2024/may-2024.md
@@ -2,7 +2,7 @@
 title: Notas da versão de maio de 2024 da Adobe Experience Platform
 description: As notas de versão de maio de 2024 da Adobe Experience Platform.
 exl-id: d8ea4f9e-2006-415c-869e-2748047072bb
-source-git-commit: 57d42d88ec9a93744450a2a352590ab57d9e5bb7
+source-git-commit: 3435ddd4b235c1c66cd29c75b779bcca607a5d4f
 workflow-type: tm+mt
 source-wordcount: '1596'
 ht-degree: 20%
@@ -51,7 +51,7 @@ A Adobe Experience Platform fornece vários painéis para você visualizar insig
 
 | Recurso | Descrição |
 | --- | --- |
-| Insights personalizáveis para relatórios estendidos do aplicativo | [faça a transição perfeita da saída da análise SQL para formatos visuais compreensíveis e amigáveis para os negócios](../../dashboards/data-distiller/customizable-insights/overview.md). Use consultas SQL personalizadas para manipulação de dados precisa e a criação de gráficos dinâmicos de diversos conjuntos de dados estruturados. Você pode usar o modo pro de consulta para executar análises complexas com SQL e, em seguida, compartilhar essa análise com usuários não técnicos por meio de gráficos em seu painel personalizado ou exportá-los em arquivos CSV. |
+| SQL Insights para relatórios estendidos do aplicativo | [faça a transição perfeita da saída da análise SQL para formatos visuais compreensíveis e amigáveis para os negócios](../../dashboards/data-distiller/sql-insights/overview.md). Use consultas SQL personalizadas para manipulação de dados precisa e a criação de gráficos dinâmicos de diversos conjuntos de dados estruturados. Você pode usar o modo pro de consulta para executar análises complexas com SQL e, em seguida, compartilhar essa análise com usuários não técnicos por meio de gráficos em seu painel personalizado ou exportá-los em arquivos CSV. |
 
 {style="table-layout:auto"}
 
