--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,10 +1,10 @@
 ---
-title: Notas de versão da Adobe Experience Platform
+title: Notas de versão da Adobe Experience Platform de julho de 2023
 description: As notas de versão de julho de 2023 da Adobe Experience Platform.
 exl-id: f9fded71-8ce4-47bc-81e8-22b2482e6283
-source-git-commit: c35b43654d31f0f112258e577a1bb95e72f0a971
+source-git-commit: d6e306294d0a119108e2de7ba03ebed4f633fba1
 workflow-type: tm+mt
-source-wordcount: '1754'
+source-wordcount: '1756'
 ht-degree: 91%
 
 ---
