--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -1,11 +1,11 @@
 ---
-title: Notas de versão da Adobe Experience Platform
+title: Notas de versão da Adobe Experience Platform de junho de 2023
 description: As notas de versão de junho de 2023 da Adobe Experience Platform.
 exl-id: 8a2bf2c0-e469-42f5-b324-6acba83d5ec3
-source-git-commit: fd3001e89fd4f875c2017df25f8b1a231d7a780a
+source-git-commit: d6e306294d0a119108e2de7ba03ebed4f633fba1
 workflow-type: tm+mt
-source-wordcount: '1418'
-ht-degree: 99%
+source-wordcount: '1420'
+ht-degree: 98%
 
 ---
 
