Updated by task 'AUTO_TM_MT_1729032451679'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/f4fd8fa45002262d795baa885325224b5b172a76

--- a/help/release-notes/2024/may-2024.md
+++ b/help/release-notes/2024/may-2024.md
@@ -2,10 +2,10 @@
 title: Notas da versão de maio de 2024 da Adobe Experience Platform
 description: As notas de versão de maio de 2024 da Adobe Experience Platform.
 exl-id: d8ea4f9e-2006-415c-869e-2748047072bb
-source-git-commit: 3435ddd4b235c1c66cd29c75b779bcca607a5d4f
+source-git-commit: eac613434f631cab567ab3fa6e30d33acac79d2f
 workflow-type: tm+mt
 source-wordcount: '1596'
-ht-degree: 20%
+ht-degree: 23%
 
 ---
 
@@ -51,7 +51,7 @@ A Adobe Experience Platform fornece vários painéis para você visualizar insig
 
 | Recurso | Descrição |
 | --- | --- |
-| SQL Insights para relatórios estendidos do aplicativo | [faça a transição perfeita da saída da análise SQL para formatos visuais compreensíveis e amigáveis para os negócios](../../dashboards/data-distiller/sql-insights/overview.md). Use consultas SQL personalizadas para manipulação de dados precisa e a criação de gráficos dinâmicos de diversos conjuntos de dados estruturados. Você pode usar o modo pro de consulta para executar análises complexas com SQL e, em seguida, compartilhar essa análise com usuários não técnicos por meio de gráficos em seu painel personalizado ou exportá-los em arquivos CSV. |
+| SQL Insights para relatórios estendidos do aplicativo | [faça a transição perfeita da saída da análise SQL para formatos visuais compreensíveis e amigáveis para os negócios](../../dashboards/sql-insights-query-pro-mode/overview.md). Use consultas SQL personalizadas para manipulação de dados precisa e a criação de gráficos dinâmicos de diversos conjuntos de dados estruturados. Você pode usar o modo pro de consulta para executar análises complexas com SQL e, em seguida, compartilhar essa análise com usuários não técnicos por meio de gráficos em seu painel personalizado ou exportá-los em arquivos CSV. |
 
 {style="table-layout:auto"}
 
@@ -115,7 +115,7 @@ O [!DNL Segmentation Service] permite segmentar dados relacionados a indivíduos
 
 A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
 
-Use fontes no Experience Platform para assimilar dados de um aplicativo Adobe ou de uma fonte de dados de terceiros.
+Use fontes na Experience Platform para assimilar dados de um aplicativo da Adobe ou de uma fonte de dados de terceiros.
 
 **Recursos novos ou atualizados**
 
@@ -129,7 +129,7 @@ Use fontes no Experience Platform para assimilar dados de um aplicativo Adobe ou
 
 **Documentação nova ou atualizada**
 
-| Atualização da documentação | Descrição |
+| Documentação atualizada | Descrição |
 | --- | --- |
 | Atualizações da documentação de [!DNL Google PubSub] | A documentação de origem [!DNL Google PubSub] foi atualizada com um guia de pré-requisitos abrangente. Use a nova seção de pré-requisitos para saber como criar sua conta de serviço, conceder permissões no nível de tópico ou de assinatura e definir configurações para otimizar o uso da fonte [!DNL Google PubSub]. Leia a [[!DNL Google PubSub] visão geral](../../sources/connectors/cloud-storage/google-pubsub.md) para obter mais informações. |
 
@@ -149,7 +149,7 @@ Use essa nova funcionalidade para explorar as solicitações para o e as respost
 
 >[!CAUTION]
 >
->Observe que ao usar a funcionalidade de API interativa nas páginas de documentação, você está fazendo chamadas de API reais para os endpoints. Lembre-se disso ao testar sandboxes de produção.
+>Observe que ao usar a funcionalidade de API interativa nas páginas de documentação, você está fazendo chamadas de API reais para os pontos de acesso. Lembre-se disso ao testar sandboxes de produção.
 
 ### Insights e engajamento personalizados {#personalized-insights-engagement}
 
