--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -1,27 +1,29 @@
 ---
-keywords: Experience Platform;página inicial;tópicos populares;Amazon S3;amazon s3;S3;s3
-solution: Experience Platform
 title: Visão geral do Amazon S3 Source Connector
-description: Saiba como conectar o S3 ao Adobe Experience Platform usando APIs ou a interface do usuário.
+description: Saiba como conectar o Amazon S3 ao Adobe Experience Platform usando APIs ou a interface do usuário.
 exl-id: e38c7d09-5f5e-4c8a-b494-dce9f984f3d8
-source-git-commit: 59dfa862388394a68630a7136dee8e8988d0368c
+source-git-commit: 0cecd720e6009e54796291611052fcfdee4eecbf
 workflow-type: tm+mt
-source-wordcount: '604'
+source-wordcount: '972'
 ht-degree: 0%
 
 ---
 
-# Conector Amazon S3
+# [!DNL Amazon S3] origem
 
-O Adobe Experience Platform fornece conectividade nativa para provedores de nuvem, como AWS, [!DNL Google Cloud Platform] e [!DNL Azure]. Você pode trazer seus dados desses sistemas para o [!DNL Platform].
+O Adobe Experience Platform fornece conectividade nativa para provedores de nuvem, como AWS, [!DNL Google Cloud Platform] e [!DNL Azure]. Você pode trazer seus dados desses sistemas para o Experience Platform.
 
-As fontes de armazenamento na nuvem podem trazer seus próprios dados para o [!DNL Platform] sem precisar baixar, formatar ou carregar. Os dados assimilados podem ser formatados como XDM JSON, XDM Parquet ou delimitados. Cada etapa do processo é integrada ao fluxo de trabalho Origens. [!DNL Platform] permite trazer dados de S3 através de lotes.
+As fontes de armazenamento na nuvem podem trazer seus próprios dados para o Experience Platform sem a necessidade de baixar, formatar ou carregar. Os dados assimilados podem ser formatados como XDM JSON, XDM Parquet ou delimitados. Cada etapa do processo é integrada ao fluxo de trabalho Origens. O Experience Platform permite trazer dados do S3 por meio de lotes.
 
-## LISTA DE PERMISSÕES de endereço IP
+## Pré-requisitos {#prerequisites}
+
+Esta seção descreve as etapas de pré-requisito que você deve concluir antes de conectar sua conta do [!DNL Amazon S3] ao Experience Platform.
+
+### LISTA DE PERMISSÕES de endereço IP
 
 Uma lista de endereços IP deve ser adicionada a uma lista de permissões antes de trabalhar com conectores de origem. Falha ao adicionar endereços IP específicos da região à lista de permissões pode levar a erros ou ao não desempenho ao usar origens. Consulte a página [lista de permissões de endereço IP](../../ip-address-allow-list.md) para obter mais informações.
 
-## Restrições de nomenclatura para arquivos e diretórios
+### Restrições de nomenclatura para arquivos e diretórios
 
 Veja a seguir uma lista de restrições que você deve considerar ao nomear seu arquivo ou diretório de armazenamento em nuvem.
 
@@ -32,7 +34,7 @@ Veja a seguir uma lista de restrições que você deve considerar ao nomear seu 
 - Caracteres de caminho de URL inválidos não permitidos. Pontos de código como `\uE000`, embora válidos em nomes de arquivo NTFS, não são caracteres Unicode válidos. Além disso, alguns caracteres ASCII ou Unicode, como caracteres de controle (0x00 a 0x1F, \u0081 etc.), também não são permitidos. Para regras que regem cadeias de caracteres Unicode em HTTP/1.1, consulte [RFC 2616, Seção 2.2: Regras Básicas](https://www.ietf.org/rfc/rfc2616.txt) e [RFC 3987](https://www.ietf.org/rfc/rfc3987.txt).
 - Os seguintes nomes de arquivo não são permitidos: LPT1, LPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, LPT9, COM1, COM2, COM3, COM4, COM5, COM6, COM7, COM8, COM9, PRN, AUX, NUL, CON, CLOCK$, caractere de ponto (.) e dois caracteres de ponto (..).
 
-## Pré-requisitos {#prerequisites}
+### Configurar permissões em [!DNL Amazon S3]
 
 Para assimilar um único diretório com S3, você deve criar um usuário [!DNL Identity and Access Management] (IAM) para a Platform no console S3 e atribuir permissões para as seguintes ações:
 
@@ -47,26 +49,92 @@ As seguintes permissões também são necessárias para explorar e testar a cone
 
 Um caminho de arquivo como `myBucket/folder/subfolder/subsubfolder/abc.csv` pode levá-lo a acessar apenas `subsubfolder/abc.csv`. Se quiser acessar a subpasta, você pode especificar o parâmetro `bucket` no console S3 como `myBucket` e o `folderPath` como `folder/subfolder` para garantir que a exploração do arquivo comece em `subfolder`, e não em `subsubfolder/abc.csv`.
 
-## Usar credenciais de segurança temporárias para conectar [!DNL Amazon S3]
+### Usar credenciais de segurança temporárias para conectar [!DNL Amazon S3]
 
 Você pode conectar [!DNL Amazon S3] com credenciais de segurança temporárias usando o `s3SessionToken`. Isso permite que você conecte o [!DNL Amazon S3] à Platform sem ter que criar credenciais permanentes do IAM com [!DNL Amazon Web Services] ou fornecer acesso ao seu bucket do [!DNL Amazon S3] para usuários em ambientes não confiáveis.
 
 As credenciais de segurança temporárias funcionam de forma semelhante às credenciais de chave de acesso comuns e de longo prazo, exceto que você pode configurar uma data de expiração mais curta para suas credenciais temporárias. As expirações podem ser definidas para alguns minutos após a ativação ou para até várias horas. Credenciais temporárias também não estão contidas com o usuário. Isso significa que você deve solicitar um novo conjunto de credenciais temporárias, quando elas expiram.
 
-Para obter etapas sobre como gerar o token de sessão temporário, consulte este [[!DNL AWS] documento sobre tokens de sessão temporários](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_request.html#api_getsessiontoken)
-.
+Para obter etapas sobre como gerar o token de sessão temporário, consulte este [[!DNL AWS] documento sobre tokens de sessão temporários](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_request.html#api_getsessiontoken).
 
-## Conectar S3 a [!DNL Platform]
+## Configurar a origem do [!DNL Amazon S3] para o Experience Platform no Amazon Web Services {#aws}
 
-A documentação abaixo fornece informações sobre como conectar o S3 ao Adobe Experience Platform usando APIs ou a interface do usuário:
+>[!AVAILABILITY]
+>
+>Esta seção se aplica às implementações do Experience Platform executadas no Amazon Web Services (AWS). O Experience Platform em execução no AWS está atualmente disponível para um número limitado de clientes. Para saber mais sobre a infraestrutura de Experience Platform compatível, consulte a [visão geral de várias nuvens do Experience Platform](../../../landing/multi-cloud.md).
 
-### Uso de APIs
+Siga as etapas abaixo para saber como configurar sua conta do [!DNL Amazon S3] para o Experience Platform no Amazon Web Services (AWS).
+
+### Pré-requisitos
+
+Para conectar sua conta do [!DNL Amazon S3] ao Experience Platform no AWS, você deve ter o seguinte:
+
+- Uma conta da AWS com acesso ao bucket ou pasta [!DNL Amazon S3] que você deseja conectar.
+- As permissões IAM necessárias que permitem `s3:GetObject` e `s3:ListBucket` ações.
+
+### Acessar a origem [!DNL Amazon S3] na interface do usuário
+
+- Navegue até o catálogo de fontes na interface do usuário do Experience Platform.
+- Selecione [!DNL Amazon S3] e depois selecione **[!UICONTROL Nova conta]**.
+- Incluir na lista de permissões Copie a **Função IAM** listada em [!UICONTROL Adicionar Função IAM à]. Posteriormente, você usará essa função do IAM para configurar permissões para o bucket do [!DNL Amazon S3].
+
+![A página de autenticação da nova conta do Amazon S3.](../../images/tutorials/create/s3/iam_role.png)
+
+### Configurar permissões
+
+Você deve configurar as permissões necessárias no bucket [!DNL Amazon S3] para assimilar dados com êxito de uma região do AWS. A política do bucket que você deseja acessar deve estar associada às credenciais que você está usando.
+
+Siga as etapas abaixo para atualizar a classificação [!DNL Amazon S3]:
+
+- Faça logon em sua conta no [Console de Gerenciamento do AWS](https://aws.amazon.com/).
+- Navegue até o bucket [!DNL Amazon S3] e selecione **[!DNL Permissions]**.
+- Edite a política de bucket e adicione as seguintes permissões:
+
+>[!TIP]
+>
+>Atualize o valor de `AWS` com sua função de IAM e o valor de `Resource` com seu bucket ou pasta [!DNL Amazon S3].
+
+```json
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Sid": "AEP Get Object Related Policy Prod",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "{IAM_ROLE_TO_ALLOW_LIST}"
+            },
+            "Action": "s3:Get*",
+            "Resource": "arn:aws:s3:::{YOUR_BUCKET_NAME}/{YOUR_FOLDER_NAME}"
+        },
+        {
+            "Sid": "AEP List Bucket Prod",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "{IAM_ROLE_TO_ALLOW_LIST}"
+            },
+            "Action": "s3:ListBucket",
+            "Resource": "arn:aws:s3:::{YOUR_BUCKET_NAME}"
+        }
+    ]
+}  
+```
+
+### Forneça os detalhes da conexão do [!DNL Amazon S3] e valide e finalize a conexão
+
+Depois de configurar suas permissões, retorne ao catálogo de origens na interface do usuário do Experience Platform e navegue até a página de configuração de origem [!DNL Amazon S3]. Forneça o nome do bucket [!DNL Amazon S3] ao qual você deseja se conectar e, se aplicável, forneça o caminho para a pasta específica do bucket. Para verificar sua configuração, selecione **[!UICONTROL Testar conexão]**. Se tiver êxito, você poderá prosseguir e [criar um fluxo de dados para assimilar dados de armazenamento na nuvem no Experience Platform](../../tutorials/ui/dataflow/batch/cloud-storage.md).
+
+## Próximas etapas
+
+A documentação abaixo fornece informações sobre como conectar o [!DNL Amazon S3] ao Experience Platform usando APIs ou a interface do usuário:
+
+### Conectar [!DNL Amazon S3] ao Experience Platform usando a API
 
 - [Criar uma conexão base S3 usando a API do Serviço de fluxo](../../tutorials/api/create/cloud-storage/s3.md)
 - [Explore a estrutura de dados e o conteúdo de uma fonte de armazenamento na nuvem usando a API do serviço de fluxo](../../tutorials/api/explore/cloud-storage.md)
 - [Criar um fluxo de dados para uma fonte de armazenamento na nuvem usando a API do Serviço de fluxo](../../tutorials/api/collect/cloud-storage.md)
 
-### Uso da interface
+### Conectar [!DNL Amazon S3] ao Experience Platform usando a interface
 
 - [Criar uma conexão de origem do Amazon S3 na interface](../../tutorials/ui/create/cloud-storage/s3.md)
 - [Criar um fluxo de dados para uma conexão de armazenamento na nuvem na interface](../../tutorials/ui/dataflow/batch/cloud-storage.md)
