Updated by task 'AUTO_TM_MT_1736382757271'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/c534f5d139fd91a0f7b42e09db1bbe01e15f1879

--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -2,14 +2,18 @@
 title: Visão geral do Amazon S3 Source Connector
 description: Saiba como conectar o Amazon S3 ao Adobe Experience Platform usando APIs ou a interface do usuário.
 exl-id: e38c7d09-5f5e-4c8a-b494-dce9f984f3d8
-source-git-commit: 0cecd720e6009e54796291611052fcfdee4eecbf
+source-git-commit: ee659ded9701132b12d5b93672b4c958e9720028
 workflow-type: tm+mt
-source-wordcount: '972'
+source-wordcount: '1017'
 ht-degree: 0%
 
 ---
 
 # [!DNL Amazon S3] origem
+
+>[!IMPORTANT]
+>
+>Agora você pode usar a origem [!DNL Amazon S3] ao executar o Adobe Experience Platform no Amazon Web Services (AWS). O Experience Platform em execução no AWS está atualmente disponível para um número limitado de clientes. Para saber mais sobre a infraestrutura de Experience Platform compatível, consulte a [visão geral de várias nuvens do Experience Platform](../../../landing/multi-cloud.md).
 
 O Adobe Experience Platform fornece conectividade nativa para provedores de nuvem, como AWS, [!DNL Google Cloud Platform] e [!DNL Azure]. Você pode trazer seus dados desses sistemas para o Experience Platform.
 
