Updated by task 'AUTO_TM_MT_1736894890551'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/71dddf2c08ba4f2e918c37fa03278a4537c6fd00

--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -1,53 +1,50 @@
 ---
-keywords: Experience Platform;página inicial;tópicos populares;Amazon S3;s3;S3
-solution: Experience Platform
-title: Criar uma conexão básica do Amazon S3 usando a API do serviço de fluxo
-type: Tutorial
+title: Conecte o Amazon S3 ao Experience Platform usando a API do serviço de fluxo
 description: Saiba como conectar o Adobe Experience Platform ao Amazon S3 usando a API do Serviço de fluxo.
 exl-id: c11cf1c8-86ff-4851-b2c2-7e421dcc37ea
-source-git-commit: 59dfa862388394a68630a7136dee8e8988d0368c
+source-git-commit: 1b0e8a8e408b2a1ebd3cc50a4c8339da1484c306
 workflow-type: tm+mt
-source-wordcount: '731'
+source-wordcount: '1041'
 ht-degree: 4%
 
 ---
 
-# Criar uma conexão base [!DNL Amazon] S3 usando a API [!DNL Flow Service]
+# Conectar [!DNL Amazon S3] ao Experience Platform usando a API [!DNL Flow Service]
 
-Uma conexão base representa a conexão autenticada entre uma origem e o Adobe Experience Platform.
-
-Este tutorial guiará você pelas etapas para criar uma conexão básica para [!DNL Amazon S3] (doravante denominada &quot;[!DNL S3]&quot;) usando a [[!DNL Flow Service] API](https://www.adobe.io/experience-platform-apis/references/flow-service/).
+Leia este guia para saber como você pode conectar sua conta de origem do [!DNL Amazon] S3 à Adobe Experience Platform usando a [[!DNL Flow Service] API](https://developer.adobe.com/experience-platform-apis/references/flow-service/).
 
 ## Introdução
 
 Este manual necessita de uma compreensão funcional dos seguintes componentes da Adobe Experience Platform:
 
-* [Fontes](../../../../home.md): [!DNL Experience Platform] permite que os dados sejam assimilados de várias fontes e fornece a capacidade de estruturar, rotular e aprimorar os dados recebidos usando os serviços do [!DNL Platform].
-* [Sandboxes](../../../../../sandboxes/home.md): [!DNL Experience Platform] fornece sandboxes virtuais que particionam uma única instância do [!DNL Platform] em ambientes virtuais separados para ajudar a desenvolver aplicativos de experiência digital.
-
-As seções a seguir fornecem informações adicionais que você precisará saber para se conectar com êxito a um armazenamento do [!DNL S3] usando a API [!DNL Flow Service].
-
-### Coletar credenciais necessárias
-
-Para que [!DNL Flow Service] se conecte ao armazenamento [!DNL S3], você deve fornecer valores para as seguintes propriedades de conexão:
-
-| Credencial | Descrição |
-| ---------- | ----------- |
-| `s3AccessKey` | A ID da chave de acesso do seu bucket [!DNL S3]. |
-| `s3SecretKey` | A ID da chave secreta para o bucket [!DNL S3]. |
-| `serviceUrl` | (Opcional) O ponto de extremidade [!DNL S3] personalizado ao qual se conectar. Este campo é necessário quando a classificação [!DNL S3] é específica da região. O formato de `serviceUrl` é: `https://s3.{REGION}.amazonaws.com/)`. |
-| `bucketName` | O bucket [!DNL S3] contém seus dados e seus metadados descritivos correspondentes. O nome do bucket do [!DNL S3] deve ter entre três e 63 caracteres e deve começar e terminar com uma letra ou um número. O nome do bucket só pode ter letras minúsculas, números ou hifens (`-`) e não pode ser formatado como um endereço IP. |
-| `folderPath` | O caminho para a pasta no seu bucket [!DNL S3] onde seus dados estão armazenados. Essa credencial é necessária quando o usuário tem acesso restrito. |
-| `s3SessionToken` | (Opcional) Um token temporário de curto prazo que permite fornecer acesso temporário aos recursos do [!DNL S3] para usuários em ambientes não confiáveis. Consulte a [[!DNL S3] visão geral](../../../../connectors/cloud-storage/s3.md#prerequisites) para obter mais informações. |
-| `connectionSpec.id` | A especificação de conexão retorna as propriedades do conector de uma origem, incluindo especificações de autenticação relacionadas à criação das conexões de base e de origem. A ID da especificação de conexão para [!DNL S3] é: `ecadc60c-7455-4d87-84dc-2a0e293d997b`. |
-
-Para obter mais informações de introdução, visite [este [!DNL Amazon Web Services] documento](https://aws.amazon.com/blogs/security/wheres-my-secret-access-key/).
+* [Fontes](../../../../home.md): o Experience Platform permite que os dados sejam assimilados de várias fontes, fornecendo a capacidade de estruturar, rotular e aprimorar os dados recebidos usando os serviços do [!DNL Platform].
+* [Sandboxes](../../../../../sandboxes/home.md): o Experience Platform fornece sandboxes virtuais que particionam uma única instância do [!DNL Platform] em ambientes virtuais separados para ajudar a desenvolver aplicativos de experiência digital.
 
 ### Uso de APIs da plataforma
 
 Para obter informações sobre como fazer chamadas para APIs da Platform com êxito, consulte o manual sobre [introdução às APIs da Platform](../../../../../landing/api-guide.md).
 
-## Criar uma conexão básica
+## Conectar [!DNL Amazon S3] ao Experience Platform no Azure {#azure}
+
+Leia as etapas abaixo para obter informações sobre como conectar sua origem [!DNL Amazon S3] ao Experience Platform no Azure.
+
+### Coletar credenciais necessárias
+
+Para que [!DNL Flow Service] se conecte ao armazenamento [!DNL Amazon S3], você deve fornecer valores para as seguintes propriedades de conexão:
+
+| Credencial | Descrição |
+| ---------- | ----------- |
+| `s3AccessKey` | A ID da chave de acesso do seu bucket [!DNL Amazon S3]. |
+| `s3SecretKey` | A ID da chave secreta para o bucket [!DNL Amazon S3]. |
+| `serviceUrl` | (Opcional) O ponto de extremidade [!DNL Amazon S3] personalizado ao qual se conectar. Este campo é necessário quando a classificação [!DNL Amazon S3] é específica da região. O formato de `serviceUrl` é: `https://s3.{REGION}.amazonaws.com/)`. |
+| `bucketName` | O bucket [!DNL Amazon S3] contém seus dados e seus metadados descritivos correspondentes. O nome do bucket do [!DNL Amazon S3] deve ter entre três e 63 caracteres e deve começar e terminar com uma letra ou um número. O nome do bucket só pode ter letras minúsculas, números ou hifens (`-`) e não pode ser formatado como um endereço IP. |
+| `folderPath` | O caminho para a pasta no seu bucket [!DNL Amazon S3] onde seus dados estão armazenados. Essa credencial é necessária quando o usuário tem acesso restrito. |
+| `s3SessionToken` | (Opcional) Um token temporário de curto prazo que permite fornecer acesso temporário aos recursos do [!DNL Amazon S3] para usuários em ambientes não confiáveis. Consulte a [[!DNL Amazon S3] visão geral](../../../../connectors/cloud-storage/s3.md#prerequisites) para obter mais informações. |
+| `connectionSpec.id` | A especificação de conexão retorna as propriedades do conector de uma origem, incluindo especificações de autenticação relacionadas à criação das conexões de base e de origem. A ID da especificação de conexão para [!DNL Amazon S3] é: `ecadc60c-7455-4d87-84dc-2a0e293d997b`. |
+
+Para obter mais informações de introdução, visite [este [!DNL Amazon Web Services] documento](https://aws.amazon.com/blogs/security/wheres-my-secret-access-key/).
+
+### Criar uma conexão base para [!DNL Amazon S3] no Experience Platform no Azure
 
 Uma conexão base retém informações entre sua origem e a Platform, incluindo as credenciais de autenticação da origem, o estado atual da conexão e sua ID de conexão base exclusiva. A ID de conexão básica permite explorar e navegar pelos arquivos de dentro da origem e identificar os itens específicos que deseja assimilar, incluindo informações sobre os tipos de dados e formatos.
 
@@ -61,7 +58,9 @@ POST /connections
 
 **Solicitação**
 
-A solicitação a seguir cria uma conexão base para [!DNL S3]:
+A solicitação a seguir cria uma conexão base para [!DNL Amazon S3]:
+
++++Selecione para exibir o exemplo de solicitação
 
 ```shell
 curl -X POST \
@@ -96,9 +95,13 @@ curl -X POST \
 | `auth.params.s3SessionToken` | (Opcional) O token [!DNL S3] temporário de curto prazo usado para acessar seu bucket. |
 | `connectionSpec.id` | A ID da especificação de conexão [!DNL S3]: `ecadc60c-7455-4d87-84dc-2a0e293d997b` |
 
++++
+
 **Resposta**
 
 Uma resposta bem-sucedida retorna detalhes da conexão recém-criada, incluindo seu identificador exclusivo (`id`). Essa ID é necessária para explorar seu armazenamento no próximo tutorial.
+
++++Selecione para exibir o exemplo de resposta
 
 ```json
 {
@@ -106,6 +109,158 @@ Uma resposta bem-sucedida retorna detalhes da conexão recém-criada, incluindo 
     "etag": "\"1700d77b-0000-0200-0000-5e3b41a10000\""
 }
 ```
+
++++
+
+## Conectar [!DNL Amazon S3] ao Experience Platform no Amazon Web Services (AWS) {#aws}
+
+>[!AVAILABILITY]
+>
+>Esta seção se aplica às implementações do Experience Platform executadas no Amazon Web Services (AWS). O Experience Platform em execução no AWS está atualmente disponível para um número limitado de clientes. Para saber mais sobre a infraestrutura de Experience Platform compatível, consulte a [visão geral de várias nuvens do Experience Platform](../../../../../landing/multi-cloud.md).
+
+Leia as etapas abaixo para obter informações sobre como conectar sua origem do [!DNL Amazon S3] ao Experience Platform no AWS.
+
+### Pré-requisitos
+
+Para conectar sua conta do [!DNL Amazon S3] ao Experience Platform no AWS, você deve ter o seguinte:
+
+* Uma conta da AWS com acesso ao bucket ou pasta [!DNL Amazon S3] que você deseja conectar.
+* As permissões IAM necessárias que permitem `s3:GetObject` e `s3:ListBucket` ações.
+
+#### Recupere a função IAM para suas permissões de bucket
+
+**Formato da API**
+
+```http
+GET /connectionSpecs/{CONNECTION_SPEC_ID}/configs?authType={AUTH_TYPE}
+```
+
+**Solicitação**
+
++++Selecione para exibir o exemplo de solicitação
+
+```shell
+curl -X GET \
+  'https://platform.adobe.io/data/foundation/flowservice/connectionSpecs/ecadc60c-7455-4d87-84dc-2a0e293d997b/configs?authType=IamBasedAuthentication' \
+  -H 'Authorization: Bearer {ACCESS_TOKEN}' \
+  -H 'Content-Type: application/json' \
+  -H 'x-api-key: {API_KEY}' \
+  -H 'x-gw-ims-org-id: {ORG_ID}' \
+  -H 'x-sandbox-name: {SANDBOX_NAME}' \
+```
+
++++
+
+**Resposta**
+
+Uma resposta bem-sucedida retorna a Função IAM. Esse valor é necessário na próxima etapa para configurar permissões no bucket do [!DNL Amazon S3].
+
++++Selecione para exibir o exemplo de resposta
+
+```json
+{
+    "configParams": {
+          "IAMRole": "{IAM_ROLE}"
+    }
+}
+```
+
++++
+
+### Configurar permissões no seu bucket [!DNL Amazon S3]
+
+1. Faça logon em sua conta no [Console de Gerenciamento do AWS](https://aws.amazon.com/).
+2. Navegue até o bucket [!DNL Amazon S3] e selecione **[!DNL Permissions]**.
+3. Edite a política de bucket e adicione as seguintes permissões:
+
+>[!TIP]
+>
+>`IAM_ROLE_TO_ALLOW_LIST` é a função do IAM buscada por meio da API na etapa anterior. Você deve substituir {YOUR_BUCKET_NAME} pelo nome real do seu bucket [!DNL Amazon S3]. Se quiser conceder acesso a uma pasta específica, você também deve substituir {YOUR_FOLDER_NAME} pelo nome real da pasta à qual deseja conceder acesso.
+
+```json
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Sid": "AEP Get Object Related Policy Prod",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "{IAM_ROLE_TO_ALLOW_LIST}"
+            },
+            "Action": "s3:Get*",
+            "Resource": "arn:aws:s3:::{YOUR_BUCKET_NAME}/{YOUR_FOLDER_NAME}"
+        },
+        {
+            "Sid": "AEP List Bucket Prod",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "{IAM_ROLE_TO_ALLOW_LIST}"
+            },
+            "Action": "s3:ListBucket",
+            "Resource": "arn:aws:s3:::{YOUR_BUCKET_NAME}"
+        }
+    ]
+}  
+```
+
+### Criar uma conexão base para [!DNL Amazon S3] no Experience Platform no AWS
+
+**Formato da API**
+
+```http
+POST /connections
+```
+
+**Solicitação**
+
+A solicitação a seguir cria uma conexão base para [!DNL Amazon S3]:
+
++++Selecione para exibir o exemplo
+
+```shell
+curl -X POST \
+  'https://platform.adobe.io/data/foundation/flowservice/connections' \
+  -H 'Authorization: Bearer {ACCESS_TOKEN}' \
+  -H 'x-api-key: {API_KEY}' \
+  -H 'x-gw-ims-org-id: {ORG_ID}' \
+  -H 'x-sandbox-name: {SANDBOX_NAME}' \
+  -H 'Content-Type: application/json' \
+  -d '{
+      "name": "Amazon S3 base connection for Experience Platform on AWS",
+      "description": "Amazon S3 base connection for Experience Platform on AWS",
+      "auth": {
+          "specName": "IAMRole Based",
+          "params": {
+              "bucketName": "{YOUR_BUCKET_NAME}"
+          }
+      },
+      "connectionSpec": {
+          "id": "ecadc60c-7455-4d87-84dc-2a0e293d997b",
+          "version": "1.0"
+      }
+  }'
+```
+
+| Propriedade | Descrição |
+| --- | --- |
+| `auth.params.bucketName` | O nome do seu bucket [!DNL Amazon S3]. Esse é o mesmo valor que foi adicionado às permissões na etapa anterior. |
+
++++
+
+**Resposta**
+
+Uma resposta bem-sucedida retorna detalhes da conexão recém-criada, incluindo seu identificador exclusivo (`id`). Essa ID é necessária para explorar seu armazenamento no próximo tutorial.
+
++++Selecione para exibir o exemplo
+
+```json
+{
+    "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
+    "etag": "\"1700d77b-0000-0200-0000-5e3b41a10000\""
+}
+```
+
++++
 
 ## Próximas etapas
 
