--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -2,9 +2,9 @@
 title: Conecte o Amazon S3 ao Experience Platform usando a API do serviço de fluxo
 description: Saiba como conectar o Adobe Experience Platform ao Amazon S3 usando a API do Serviço de fluxo.
 exl-id: c11cf1c8-86ff-4851-b2c2-7e421dcc37ea
-source-git-commit: 1b0e8a8e408b2a1ebd3cc50a4c8339da1484c306
+source-git-commit: 22eae80d184ee6d0295be88856a47893faa428c7
 workflow-type: tm+mt
-source-wordcount: '1041'
+source-wordcount: '1040'
 ht-degree: 4%
 
 ---
@@ -107,6 +107,67 @@ Uma resposta bem-sucedida retorna detalhes da conexão recém-criada, incluindo 
 {
     "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
     "etag": "\"1700d77b-0000-0200-0000-5e3b41a10000\""
+}
+```
+
++++
+
+### Atualizar o token de sessão [!DNL S3]
+
+O `s3SessionToken` é temporário e deve ser atualizado quando expirar. Você pode atualizar o token de sessão associado à sua conexão básica fazendo uma solicitação PATCH para a API [!DNL Flow Service]. Consulte a [[!DNL S3] visão geral](../../../../connectors/cloud-storage/s3.md#prerequisites) para obter mais informações sobre credenciais de segurança temporárias para [!DNL S3].
+
+>[!IMPORTANT]
+>
+>O cabeçalho `If-Match` é necessário ao fazer uma solicitação PATCH. O valor desse cabeçalho é a tag exclusiva da conexão que você deseja atualizar.
+
+**Formato da API**
+
+```http
+PATCH /connections
+```
+
+**Solicitação**
+
+A solicitação a seguir cria uma conexão base para [!DNL Amazon S3]:
+
++++Selecione para exibir o exemplo de solicitação
+
+```shell
+curl -X PATCH \
+    'https://platform.adobe.io/data/foundation/flowservice/connections/4cb0c374-d3bb-4557-b139-5712880adc55' \
+    -H 'Authorization: Bearer {ACCESS_TOKEN}' \
+    -H 'Content-Type: application/json' \
+    -H 'x-api-key: {API_KEY}' \
+    -H 'x-gw-ims-org-id: {ORG_ID}' \
+    -H 'x-sandbox-name: {SANDBOX_NAME}' \
+    -H 'If-Match: "1700d77b-0000-0200-0000-5e3b41a10000"'
+    -d '[
+        {
+            "op": "replace",
+            "path": "/auth/params/s3SessionToken",
+            "value": "{SESSION_TOKEN}"
+        }
+    ]'
+```
+
+| Parâmetro | Descrição |
+| --------- | ----------- |
+| `op` | A chamada de operação usada para definir a ação necessária para atualizar a conexão. As operações incluem: `add`, `replace` e `remove`. |
+| `path` | O caminho do parâmetro a ser atualizado. |
+| `value` | O novo valor com o qual você deseja atualizar seu parâmetro. |
+
++++
+
+**Resposta**
+
+Uma resposta bem-sucedida retorna a ID de conexão básica e uma tag atualizada. Você pode verificar a atualização fazendo uma solicitação GET para a API [!DNL Flow Service] e, ao mesmo tempo, fornecendo a ID da conexão.
+
++++Selecione para exibir o exemplo de resposta
+
+```json
+{
+    "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
+    "etag": "\"3600e378-0000-0200-0000-5f40212f0000\""
 }
 ```
 
@@ -265,60 +326,3 @@ Uma resposta bem-sucedida retorna detalhes da conexão recém-criada, incluindo 
 ## Próximas etapas
 
 Seguindo este tutorial, você criou uma conexão S3 usando APIs e uma ID exclusiva foi obtida como parte do corpo da resposta. Você pode usar esta ID de conexão para [explorar armazenamentos em nuvem usando a API de Serviço de Fluxo](../../explore/cloud-storage.md).
-
-## Apêndice
-
-A seção a seguir fornece informações adicionais sobre o uso da origem [!DNL S3].
-
-### Atualizar o token de sessão [!DNL S3]
-
-O `s3SessionToken` é temporário e deve ser atualizado quando expirar. Você pode atualizar o token de sessão associado à sua conexão básica fazendo uma solicitação PATCH para a API [!DNL Flow Service]. Consulte a [[!DNL S3] visão geral](../../../../connectors/cloud-storage/s3.md#prerequisites) para obter mais informações sobre credenciais de segurança temporárias para [!DNL S3].
-
->[!IMPORTANT]
->
->O cabeçalho `If-Match` é necessário ao fazer uma solicitação PATCH. O valor desse cabeçalho é a tag exclusiva da conexão que você deseja atualizar.
-
-**Formato da API**
-
-```http
-PATCH /connections
-```
-
-**Solicitação**
-
-A solicitação a seguir cria uma conexão base para [!DNL S3]:
-
-```shell
-curl -X PATCH \
-    'https://platform.adobe.io/data/foundation/flowservice/connections/4cb0c374-d3bb-4557-b139-5712880adc55' \
-    -H 'Authorization: Bearer {ACCESS_TOKEN}' \
-    -H 'Content-Type: application/json' \
-    -H 'x-api-key: {API_KEY}' \
-    -H 'x-gw-ims-org-id: {ORG_ID}' \
-    -H 'x-sandbox-name: {SANDBOX_NAME}' \
-    -H 'If-Match: "1700d77b-0000-0200-0000-5e3b41a10000"'
-    -d '[
-        {
-            "op": "replace",
-            "path": "/auth/params/s3SessionToken",
-            "value": "{SESSION_TOKEN}"
-        }
-    ]'
-```
-
-| Parâmetro | Descrição |
-| --------- | ----------- |
-| `op` | A chamada de operação usada para definir a ação necessária para atualizar a conexão. As operações incluem: `add`, `replace` e `remove`. |
-| `path` | O caminho do parâmetro a ser atualizado. |
-| `value` | O novo valor com o qual você deseja atualizar seu parâmetro. |
-
-**Resposta**
-
-Uma resposta bem-sucedida retorna a ID de conexão básica e uma tag atualizada. Você pode verificar a atualização fazendo uma solicitação GET para a API [!DNL Flow Service] e, ao mesmo tempo, fornecendo a ID da conexão.
-
-```json
-{
-    "id": "4cb0c374-d3bb-4557-b139-5712880adc55",
-    "etag": "\"3600e378-0000-0200-0000-5f40212f0000\""
-}
-```
